deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goofy
  labels:
    app: goofy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: goofy
  template:
    metadata:
      labels:
        app: goofy
    spec:
      containers:
      - name: goofy
        image: 078512149071.dkr.ecr.ap-northeast-2.amazonaws.com/goofy-server:latest
        ports:
        - containerPort: 3000
