svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: goofy
spec:
  selector:
    app: goofy
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
